Overlapping of header fixed

--- a/style.css
+++ b/style.css
@@ -111,13 +111,12 @@ h6 {
 
 .header {
     position: fixed;
-    left: 0;
     top: 0;
     height: 15%;
     width: 100%;
     background: var(--primary);
     color: #fff;
-    z-index: 999;
+    z-index: 9999;
 }
 
 .header .site-title {
@@ -226,7 +225,7 @@ main {
 .page-title {
     position: sticky;
     top: 0;
-    z-index: 9999;
+    z-index: 0;
     transition: all .2s;
 }
 
